// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiled prompt snapshots > medieval market — 9:16 1`] = `
"FORMAT
Create one full-bleed 9:16 vertical image containing exactly four equal panels in a 2x2 grid, read in order top-left, top-right, bottom-left, bottom-right. Use thin near-black dividers only; every quadrant fills its space edge-to-edge with no outer border, padding, matting or pale gutters.

STYLE
Whimsical medieval storybook illustration, painterly, warm golden light.

SETTING AND TIME
Whimsical medieval storybook illustration with painterly textures and expressive acting. Warm golden sunlight with amber and rich red tones. Lively medieval European market with cobblestone streets, wooden stalls and bread baskets.
World reference (story style wins): A sunlit medieval European market with cobblestones, wooden stalls and bread baskets.

CHARACTERS
- Master Elrick — elderly scholar with a long white beard, spectacles and scholarly medieval robes.
- Leo — curious boy with messy brown hair and a simple medieval tunic.
Reference images define identity only — face, skin tone, build and distinguishing features. Hair, clothing, age, pose, setting and camera come from this prompt. Render in the story’s style. Show each named character at most once per panel.

PANELS
Top-left. Camera: wide establishing shot. A lively market square filled with colourful wooden stalls, bread baskets and animated merchants. Emotion: Cheerful. Focus: market atmosphere, stalls, bread baskets. Leo and Master Elrick are absent.
Top-right. Camera: medium shot. Leo stands beside Master Elrick in the centre of the busy market. Emotion: Leo is curious and expectant; Elrick is calm and attentive.
Bottom-left. Camera: medium close-up. Master Elrick smiles, strokes his beard with one hand and tosses a bright red apple with the other; the apple is suspended in mid-air. Leo is absent. Emotion: Playful and instructive. Focus: red apple.
Bottom-right. Camera: medium shot. Master Elrick holds the same red apple in his open palm while Leo studies it. Emotion: Warmth, wonder and thoughtful curiosity. Focus: Leo's expression, red apple.

CONTINUITY
Keep one story world and four sequential moments; within this continuous scene keep identity, clothing, active props and physical state consistent. The bright red apple is one continuous object across the bottom two panels. Keep the same medieval market throughout.

AVOID
duplicated or cloned named characters; extra or nested panels; modern or anachronistic elements; text, captions, speech bubbles, subtitles, labels, logos or watermarks; white or pale gutters, outer borders, padding or margins."
`;

exports[`compiled prompt snapshots > medieval market — 9:16 with regeneration deltas 1`] = `
"FORMAT
Create one full-bleed 9:16 vertical image containing exactly four equal panels in a 2x2 grid, read in order top-left, top-right, bottom-left, bottom-right. Use thin near-black dividers only; every quadrant fills its space edge-to-edge with no outer border, padding, matting or pale gutters.

STYLE
Whimsical medieval storybook illustration, painterly, warm golden light.

SETTING AND TIME
Whimsical medieval storybook illustration with painterly textures and expressive acting. Warm golden sunlight with amber and rich red tones. Lively medieval European market with cobblestone streets, wooden stalls and bread baskets.
World reference (story style wins): A sunlit medieval European market with cobblestones, wooden stalls and bread baskets.

CHARACTERS
- Master Elrick — elderly scholar with a long white beard, spectacles and scholarly medieval robes.
- Leo — curious boy with messy brown hair and a simple medieval tunic.
Reference images define identity only — face, skin tone, build and distinguishing features. Hair, clothing, age, pose, setting and camera come from this prompt. Render in the story’s style. Show each named character at most once per panel.

PANELS
Top-left. Camera: wide establishing shot. A lively market square filled with colourful wooden stalls, bread baskets and animated merchants. Emotion: Cheerful. Focus: market atmosphere, stalls, bread baskets. Leo and Master Elrick are absent.
Top-right. Camera: medium shot. Leo stands beside Master Elrick in the centre of the busy market. Emotion: Leo is curious and expectant; Elrick is calm and attentive.
Bottom-left. Camera: medium close-up. Master Elrick smiles, strokes his beard with one hand and tosses a bright red apple with the other; the apple is suspended in mid-air. Leo is absent. Emotion: Playful and instructive. Focus: red apple.
Bottom-right. Camera: medium shot. Master Elrick holds the same red apple in his open palm while Leo studies it. Emotion: Warmth, wonder and thoughtful curiosity. Focus: Leo's expression, red apple.

CONTINUITY
Keep one story world and four sequential moments; within this continuous scene keep identity, clothing, active props and physical state consistent. The bright red apple is one continuous object across the bottom two panels. Keep the same medieval market throughout.

USER DIRECTIVES
Visual changes only — do not alter the layout, panel count, character identity, or story events.
Reimagine the visual treatment while preserving the same story event, characters and panel count.
Overall: make the market busier and add evening light.
Bottom-right: move the apple closer to Leo.

AVOID
duplicated or cloned named characters; extra or nested panels; modern or anachronistic elements; text, captions, speech bubbles, subtitles, labels, logos or watermarks; white or pale gutters, outer borders, padding or margins."
`;

exports[`compiled prompt snapshots > medieval market — 16:9 1`] = `
"FORMAT
Create one full-bleed 16:9 image containing exactly four equal panels in a 2x2 grid, read in order top-left, top-right, bottom-left, bottom-right. Use thin near-black dividers only; every quadrant fills its space edge-to-edge with no outer border, padding, matting or pale gutters.

STYLE
Whimsical medieval storybook illustration, painterly, warm golden light.

SETTING AND TIME
Whimsical medieval storybook illustration with painterly textures and expressive acting. Warm golden sunlight with amber and rich red tones. Lively medieval European market with cobblestone streets, wooden stalls and bread baskets.
World reference (story style wins): A sunlit medieval European market with cobblestones, wooden stalls and bread baskets.

CHARACTERS
- Master Elrick — elderly scholar with a long white beard, spectacles and scholarly medieval robes.
- Leo — curious boy with messy brown hair and a simple medieval tunic.
Reference images define identity only — face, skin tone, build and distinguishing features. Hair, clothing, age, pose, setting and camera come from this prompt. Render in the story’s style. Show each named character at most once per panel.

PANELS
Top-left. Camera: wide establishing shot. A lively market square filled with colourful wooden stalls, bread baskets and animated merchants. Emotion: Cheerful. Focus: market atmosphere, stalls, bread baskets. Leo and Master Elrick are absent.
Top-right. Camera: medium shot. Leo stands beside Master Elrick in the centre of the busy market. Emotion: Leo is curious and expectant; Elrick is calm and attentive.
Bottom-left. Camera: medium close-up. Master Elrick smiles, strokes his beard with one hand and tosses a bright red apple with the other; the apple is suspended in mid-air. Leo is absent. Emotion: Playful and instructive. Focus: red apple.
Bottom-right. Camera: medium shot. Master Elrick holds the same red apple in his open palm while Leo studies it. Emotion: Warmth, wonder and thoughtful curiosity. Focus: Leo's expression, red apple.

CONTINUITY
Keep one story world and four sequential moments; within this continuous scene keep identity, clothing, active props and physical state consistent. The bright red apple is one continuous object across the bottom two panels. Keep the same medieval market throughout.

AVOID
duplicated or cloned named characters; extra or nested panels; modern or anachronistic elements; text, captions, speech bubbles, subtitles, labels, logos or watermarks; white or pale gutters, outer borders, padding or margins."
`;
